--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
-    "nodemon": "^1.8.1"
+    "grunt-sass": "^1.1.0",
+    "nodemon": "^1.8.1",
+    "pg": "^4.4.3",
+    "sequelize": "^3.15.1",
+    "sequelize-cli": "^2.2.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-sass": "^1.0.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
